syntax = "proto3";

option go_package = './proto/generated';

package proto;

import "proto/task.proto";
import "proto/no_param.proto";
import "proto/message.proto";
import "proto/task_id.proto";
import "proto/task_list.proto";
import "proto/user.proto";
import "proto/user_info.proto";
import "proto/sort_task.proto";
import "proto/refresh_token.proto";
import "proto/user_id.proto";

service TaskManagementService{
    rpc CreateTask (Task) returns (Message);
    rpc CreateTasks (stream Task) returns (Message);
    rpc CreateTaskList (stream Task) returns (stream Task);
    rpc GetAllTask (NoParam) returns (TaskList);
    rpc GetTaskById (TaskId) returns (Task);
    rpc UpdateTaskById (Task) returns (Task);
    rpc DeleteTaskById (TaskId) returns (Message);
    rpc UserLogin (UserInfo) returns (UserId);
    rpc UserRegister (User) returns (Message);
    rpc SortTasks(SortTasksRequest) returns (TaskList);
    rpc RefreshToken(Token) returns (Message);
}